More content, change default to dark mode red and more fixes

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root
 {
-    --primary-color: #f1c40f;
-    --primary-dark: #2c2816;
+    --primary-color: #e74c3c;
+    --primary-dark: #2c2320;
 }
 
 .theme-toggle i
